--- a/1_AlejandroCastroReus_1209.ipynb
+++ b/1_AlejandroCastroReus_1209.ipynb
@@ -849,7 +849,7 @@
    "source": [
     "r_bitcoin = pd.DataFrame(BTC[[\"r\"]])\n",
     "hist=r_bitcoin.plot.hist(bins=12,alpha=0.5,title=\"Histogram of daily continuos Bitcoin Returns\")\n",
-    "# Se puede ver que la gráfica tiene la mayor cantidad de returns en la mitad derecha. La mayor parte de los datos están entre -0.1 y 0.1 habiendo muy pocos valores fuera de este rango, valores fuera de [-0.3, 0.3] son inexistentes. No parece haber mucha diferencia entre r y R."
+    "# SE PUEDE VER QUE LA GRÁFICA TIENE LA MAYOR CANTIDAD DE RETURNS EN LA MITAD DERECHA. LA MAYOR PARTE DE LOS DATOS ESTÁN ENTRE -0.1 Y 0.1 HABIENDO MUY POCOS VALORES FUERA DE ESTE RANGO, VALORES FUERA DE [-0.3, 0.3] SON INEXISTENTES. NO PARECE HABER MUCHA DIFERENCIA ENTRE R Y R."
    ]
   },
   {
