--- a/2_AlejandroCastroReus_1209.ipynb
+++ b/2_AlejandroCastroReus_1209.ipynb
@@ -698,7 +698,7 @@
     "t = (msft_mean - 0) / (msft_std / math.sqrt(MSFT[\"r\"].count()))\n",
     "print(\"T value:\", t)\n",
     "\n",
-    "# SE PUEDE VER QUE EL T VALUE ES MENOR AL CRITICAL VALUE POR LO QUE NO SE PUEDE DESCARTAR LA HIPÓTESIS NULA\n"
+    "# SE PUEDE VER QUE EL T VALUE ES BASTANTE MAYOR AL CRITICAL VALUE POR LO QUE SE PUEDE DECIR CON BASTANTE CONFIANZA QUE LA HIPÓTESIS ALTERNA ES CORRECTA\n"
    ]
   }
  ],
